<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_70"
        android:background="@color/underline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/one_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_25"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/points_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@drawable/points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@drawable/share"
                app:layout_constraintEnd_toStartOf="@id/points_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bookmark_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@drawable/bookmark"
                app:layout_constraintEnd_toStartOf="@id/share_button"
                app:layout_constraintTop_toTopOf="@id/share_button" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_70"
                app:cardCornerRadius="@dimen/dp_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button">

                <ImageView
                    android:id="@+id/image_fk"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_17"
                app:layout_constraintStart_toEndOf="@id/profile_picture"
                app:layout_constraintTop_toTopOf="@id/profile_picture" />

            <TextView
                android:id="@+id/date_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintStart_toEndOf="@id/profile_picture"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <Button
                android:id="@+id/follow_button"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@drawable/follow_button_backround"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/date_area"
                app:layout_constraintStart_toEndOf="@id/user_name" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_area" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/info_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/explanation"
                android:textSize="@dimen/sp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_area" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/second_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_240"
                android:background="@drawable/claps_comt_btn_backround"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/btn_claps"
                        android:layout_width="@dimen/dp_27"
                        android:layout_height="@dimen/dp_27"
                        android:layout_marginStart="@dimen/dp_15"
                        android:background="@drawable/hands"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/claps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_line"
                        app:layout_constraintStart_toEndOf="@id/btn_claps"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/btn_line"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginStart="@dimen/dp_10"
                        android:background="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/create_comment"
                        app:layout_constraintStart_toEndOf="@id/claps"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/create_comment"
                        android:layout_width="@dimen/dp_27"
                        android:layout_height="@dimen/dp_27"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@drawable/chat"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_line"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/create_comment"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

